Images in, almost fully styled. Still need to fix alignment on status bar

--- a/stylus/app-nav-bar.styl
+++ b/stylus/app-nav-bar.styl
@@ -3,7 +3,7 @@
 bar-height = 60px
 
 .app-nav-bar
-	position absolute
+	position fixed
 	bottom 0px
 	width 100%
 	height bar-height
