--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -3,7 +3,8 @@
 
 html, body
 	width 100%
-	height 100%	
+	height 100%
+	font-family app-header-font
 
 .app-container
 	width 100%
