--- a/stylus/top-bar.styl
+++ b/stylus/top-bar.styl
@@ -4,6 +4,8 @@
 	width 100%
 	height 20px
 	background-color ppurple
+	position fixed
+	top 0px
 
 .top-bar
 	flex()
@@ -12,6 +14,7 @@
 	width 100%
 	height 60px
 	background-color ppurple
+	margin-top 20px
 	
 .top-bar-header
 	color pwhite
